@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-315
+CSN=CSN-platforms-316
 Dependencies=hasim/HEAD
